<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_2"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="315dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/location_current"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:text="@string/location_current"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="191dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/wind_kph_current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_current"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/pressure_mb_current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure_current"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/precip_mm_current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precip_current"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/humidity_current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity_current"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/cloud_current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cloud_current"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/gust_kph_current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gust_current"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/temp_c_current"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:gravity="center"
                    android:text="@string/temp_current"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/condition_current"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:gravity="center"
                    android:text="@string/condition_current"
                    android:textColor="@color/white" />


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:text="@string/last_update_current"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/last_update_current"
                android:layout_width="268dp"
                android:layout_height="wrap_content"
                android:text="@string/last_update_current"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleviewForecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_fc"/>

    </RelativeLayout>

</LinearLayout>