<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:background="@drawable/background_2"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="368dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/avgtempfc"
                android:layout_width="match_parent"
                android:layout_height="188dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/avg_temp"
                android:textColor="@color/white"
                android:textSize="80sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/conditionfc"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/condition_fc"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/datefc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tgl_fc"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:text="@string/max_temp"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:text="@string/min_temp"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:text="@string/max_wind"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:text="@string/total_precip"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/maxtempfc"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:gravity="center"
                    android:text="@string/max_temp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/mintempfc"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:gravity="center"
                    android:text="@string/min_temp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/maxwindfc"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:gravity="center"
                    android:text="@string/max_wind"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/totalprecipfc"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:gravity="center"
                    android:text="@string/total_precip"
                    android:textColor="@color/white" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>